prevent markdown image from overflowing container width

--- a/frontend/src/assets/styles/drawers/notes.css
+++ b/frontend/src/assets/styles/drawers/notes.css
@@ -14,6 +14,13 @@
         .n-thing-main__description {
           font-size: 13px;
         }
+
+        .note-render {
+          img {
+            height: auto;
+            max-width: 100%;
+          }
+        }
       }
     }
 
